--- a/plugins/accounts/bower.json
+++ b/plugins/accounts/bower.json
@@ -20,7 +20,8 @@
     "hawtio-core": "~2.0.0",
     "hawtio-core-navigation": "~2.0.0",
     "hawtio-utilities": "~2.0.0",
-    "keycloak": "~1.1.0"
+    "keycloak": "~1.1.0",
+    "angular-resource": "~1.3.12"
   },
   "devDependencies": {
     "bootstrap": "~3.3.1",
