--- a/bower.json
+++ b/bower.json
@@ -13,24 +13,27 @@
     "dist/hawkular-inventory.js"
   ],
   "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "libs",
-    "test",
-    "tests",
-    "plugins"
+    "*",
+    "!dist/",
+    "!dist/*"
   ],
   "dependencies": {
-    "hawtio-core": "2.0.9",
+    "angular-bootstrap": "0.11.0",
+    "hawkular-charts": "0.1.13",
+    "hawkular-ui-services": "0.1.3",
     "hawtio-core-navigation": "2.0.17",
+    "hawtio-core": "2.0.9",
     "hawtio-utilities": "2.0.16",
-    "hawkular-charts": "~0.1.13",
-    "hawkular-ui-services": "~0.1.3"
+    "lodash": "2.4.1",
+    "moment": "2.9.0",
+    "toastr": "2.1.0",
   },
   "devDependencies": {
+    "angular-mocks": "1.3.7",
+    "angular-resource": "1.3.7",
     "bootstrap": "3.3.2",
-    "patternfly": "1.1.3",
-    "hawtio-core-dts": "2.0.9"
+    "hawkular-ui-services": "0.1.3",
+    "hawtio-core-dts": "2.0.9",
+    "patternfly": "1.1.3"
   }
 }
