HAWKULAR-37: Added metrics build

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-typescript": "2.4.2",
     "gulp-watch": "3.0.0",
     "gulp": "3.8.11",
+    "minimist": "1.1.0",
     "through2": "^0.6.3",
     "underscore.string": "2.4.0",
     "vinyl-map": "1.0.1",
