--- a/bower.json
+++ b/bower.json
@@ -26,11 +26,11 @@
     "hawtio-utilities": "2.0.16",
     "lodash": "2.4.1",
     "moment": "2.9.0",
-    "toastr": "2.1.0",
+    "toastr": "2.1.0"
   },
   "devDependencies": {
-    "angular-mocks": "1.3.7",
-    "angular-resource": "1.3.7",
+    "angular-mocks": "1.3.13",
+    "angular-resource": "1.3.13",
     "bootstrap": "3.3.2",
     "hawkular-ui-services": "0.1.3",
     "hawtio-core-dts": "2.0.9",
