Travis definition fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ notifications:
 before_install:
   - 'npm install -g bower gulp typescript'
 
-script: 
+script:
+  - 'npm install'
+  - 'bower install'
   - 'gulp'
-
-# use this line in case of building only a sub-set of plugins
-#  - 'for plugin in alerts inventory metrics; do ./.travis.build.plugin.sh $plugin; done;'
