--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,9 @@
     "hawtio-utilities": "2.0.16",
     "lodash": "2.4.1",
     "moment": "2.9.0",
-    "toastr": "2.1.0"
+    "toastr": "2.1.0",
+    "keycloak": "~1.1.0",
+    "angular-resource": "~1.3.12"
   },
   "devDependencies": {
     "bootstrap": "3.3.2",
